--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-website",
   "version": "0.1.0",
-  "homepage": "https://alondracorrea.github.io/alondracorrea.github.io",
+  "homepage": "https://alondracorrea.github.io",
   
   "private": true,
   "dependencies": {
